# SE3313-ChatRoom

./: package-lock.json  proxy.py  smallproxy.py  tcp_echo_server.py  test_client.py
Chat App/: package-lock.json  package.json
Chat-App/: package-lock.json  package.json  tsconfig.json
Chat-App/src/: index.css  index.tsx
Chat-App/src/components/Avatar/: Avatar.tsx
Chat-App/src/components/ChatHeader/: ChatHeader.module.css  ChatHeader.tsx
Chat-App/src/components/ChatLayout/: ChatLayout.module.css  ChatLayout.tsx
Chat-App/src/components/MessageInput/: MessageInput.module.css  MessageInput.tsx
Chat-App/src/components/MessageList/: MessageItem.module.css  MessageItem.tsx  MessageList.module.css  MessageList.tsx
Chat-App/src/components/Sidebar/: Sidebar.module.css  Sidebar.tsx  SidebarItem.module.css  SidebarItem.tsx
Chat-App/src/components/UsernameModal/: UsernameModal.css  UsernameModal.tsx
Chat-App/src/components/hooks/: useWebSocket.tsx
Chat-App/src/constants/: constants.tsx
Chat-App/src/types/: chatTypes.ts
Client/: client.cpp  sample.json
Proxy/: PROXY_README.txt  commandLine_frontend.py  smallproxy.py  smallproxy_functionbased.py  tcp_spammer.py  test_proxy_perf.py  test_smallproxy_functionbased.py
server/: package-lock.json  package.json  tsconfig.json
server/src/: CMakeLists.txt  README  Test.py  logic.cpp  logic.h  server.cpp  server.ts  socket_server.cpp  socket_server.h
server/src/TESTS/: logic_unit_test.cpp  performance_test.py
server/src/TESTS/functional_tests/: PEER_1.py  PEER_2.py  individual_interactions.py
(+9 files in other folders)
